@@ -28,8 +28,8 @@
 SRCDIR	= ../libtiff
 
 #
-# VERSION:	v3.5.2
-# DATE:		Tue Sep 28 13:26:51 CEST 1999
+# VERSION:	v3.5.4
+# DATE:		Mon Mar 20 13:09:13 EST 2000
 # TARGET:	i586-unknown-linux
 # CCOMPILER:	/usr/bin/gcc
 #
@@ -63,7 +63,7 @@ IPATH	= -I. -I${SRCDIR}
 CONF_LIBRARY= 
 COPTS	= -g
 OPTIMIZER=-O
-CFLAGS	=  -fPIC ${COPTS} ${OPTIMIZER} ${IPATH} ${CONF_LIBRARY}
+CFLAGS	=   ${COPTS} ${OPTIMIZER} ${IPATH} ${CONF_LIBRARY}
 #
 SRCS	= \
 	tif_aux.c \
@@ -138,8 +138,8 @@ OBJS	= \
 TARGETS	= libtiff.a
 
 all:	${TARGETS}
-	if [ LINUXdso != nodso ]; then \
-	    ${MAKE} LINUXdso; \
+	if [ nodso != nodso ]; then \
+	    ${MAKE} nodso; \
 	else \
 	    true; \
 	fi
@@ -162,10 +162,10 @@ libtiff.a: ${OBJS}
 # default IRIX DSO building rule
 IRIXdso: ${OBJS}
 	@if [ "`basename ${CC}`" = "gcc" ]; then \
-	   ${LD} -n32  -o libtiff.so.3 -shared -rdata_shared \
+	   ${LD} -n32  -o libtiff.a -shared -rdata_shared \
 	   ${OBJS}; \
 	else \
-	    ${CC}  -o libtiff.so.3 -shared -rdata_shared \
+	    ${CC}  -o libtiff.a -shared -rdata_shared \
 	        -check_registry ${SRCDIR}/../port/irix/so_locations \
 	        -quickstart_info \
 	        ${OBJS}  ; \
@@ -173,16 +173,16 @@ IRIXdso: ${OBJS}
 	touch $@
 # special rule for IRIX 5.2
 IRIX52dso: ${OBJS}
-	${LD} -elf -o libtiff.so.3 -shared -no_unresolved -all ${OBJS} \
+	${LD} -elf -o libtiff.a -shared -no_unresolved -all ${OBJS} \
 	      -lc -lm
 	touch $@
 # Solaris 2.x
 SOLARISdso: ${OBJS}
-	${LD} -L/usr/local/lib -G -h libtiff.so.3 -o libtiff.so.3 ${OBJS}
+	${LD} -L/usr/local/lib -G -h libtiff.a -o libtiff.a ${OBJS}
 	touch $@
 # HP-UX A.09.03
 HPUXdso: ${OBJS}
-	${LD} +b/usr/local/lib -b -o libtiff.so.3 ${OBJS}
+	${LD} +b/usr/local/lib -b -o libtiff.a ${OBJS}
 	touch $@
 # AIX 2.3.5 and 4.1.1
 AIXdso: ${OBJS}
@@ -193,8 +193,8 @@ AIXdso: ${OBJS}
 	      >> libtiff.syms
 	${LD} -o shr.o libtiff.a -H512 -T512 -bM\:SRE \
 	    -bE\:libtiff.syms   -lc -lm -L/usr/local/lib
-	rm -f libtiff.syms libtiff.so.3
-	${AR} ${AROPTS} libtiff.so.3 shr.o
+	rm -f libtiff.syms libtiff.a
+	${AR} ${AROPTS} libtiff.a shr.o
 	rm -f shr.o
 	touch $@
 # NetBSD 1.1 or FreeBSD
@@ -202,19 +202,19 @@ NETBSDdso FREEBSDdso: ${OBJS}
 	@rm -f libtiff_pic.a
 	@${AR} cq libtiff_pic.a `lorder ${OBJS} | tsort -q`
 	${RANLIB} libtiff_pic.a
-	${LD} -x -Bshareable -Bforcearchive -o libtiff.so.3 libtiff_pic.a
+	${LD} -x -Bshareable -Bforcearchive -o libtiff.a libtiff_pic.a
 	rm -f libtiff_pic.a
 	touch $@
 # linux ELF shared lib rule
 LINUXdso:  ${OBJS}
-	${CC} -shared -Wl,-soname,libtiff.so.3 \
-	    -o libtiff.so.3.5.01  ${OBJS}   
-	rm -f libtiff.so.3
-	/bin/ln -s libtiff.so.3.5.01 libtiff.so.3
+	${CC} -shared -Wl,-soname,libtiff.a \
+	    -o libtiff.a  ${OBJS}   
+	rm -f libtiff.a
+	/bin/ln -s libtiff.a libtiff.a
 	touch $@
 # OSF/1 3.2 shared lib rule
 OSFdso: ${OBJS}
-	${LD} -o libtiff.so.3 -shared -error_unresolved ${OBJS}   -lc -lm
+	${LD} -o libtiff.a -shared -error_unresolved ${OBJS}   -lc -lm
 
 
 ${OBJS}: ${SRCDIR}/tiffio.h ${SRCDIR}/tiff.h ${SRCDIR}/tif_dir.h
@@ -313,7 +313,7 @@ tif_vms.o: ${SRCDIR}/tif_vms.c
 tif_win3.o: ${SRCDIR}/tif_win3.c
 	${CC} -c ${CFLAGS} ${SRCDIR}/tif_win3.c
 
-INCS	= ${SRCDIR}/tiff.h ${SRCDIR}/tiffio.h
+INCS	= ${SRCDIR}/tiff.h ${SRCDIR}/tiffio.h ${SRCDIR}/tiffconf.h
 
 installHdrs: ${INCS}
 	${INSTALL} -idb tiff.sw.dev -m 755 -dir /usr/local/include
@@ -322,20 +322,20 @@ installHdrs: ${INCS}
 	    ${INSTALL} -idb tiff.sw.dev -m 444 -F /usr/local/include		\
 		-src $$i -O $$f;					\
 	done
-installDSO: LINUXdso
-	if [ so.3.5.01 != so.3 ]; then			\
+installDSO: nodso
+	if [ a != a ]; then			\
 	    ${INSTALL} -idb tiff.sw.tools -m 555 -F /usr/local/lib		\
-		-O libtiff.so.3.5.01;				\
+		-O libtiff.a;				\
 	    ${INSTALL} -idb tiff.sw.tools -F /usr/local/lib			\
-		-ln libtiff.so.3.5.01 -O libtiff.so.3;	\
+		-ln libtiff.a -O libtiff.a;	\
 	else								\
 	    ${INSTALL} -idb tiff.sw.tools -m 555 -F /usr/local/lib		\
-		-O libtiff.so.3;					\
+		-O libtiff.a;					\
 	fi
 install: all installHdrs
 	${INSTALL} -idb tiff.sw.dev -m 755 -dir /usr/local/lib
 	${INSTALL} -idb tiff.sw.dev -m 444 -F /usr/local/lib -O libtiff.a
-	if [ LINUXdso != nodso ]; then					\
+	if [ nodso != nodso ]; then					\
 	    ${MAKE} installDSO;						\
 	else								\
 	    true;							\
@@ -345,4 +345,4 @@ clean:
 	rm -f ${TARGETS} ${OBJS} core a.out \
 	    mkg3states tif_fax3sm.c \
 	    mkversion version.h \
-	    libtiff.a libtiff.so.3 libtiff.so.3.5.01 *dso
+	    libtiff.a libtiff.a libtiff.a *dso
